--- a/waste/templates/src/form.html
+++ b/waste/templates/src/form.html
@@ -86,7 +86,7 @@ Types and Quantity of e-waste stored
 </div>
 </table>
 <h3>
-Collection centre/registered dismantler or recycler
+Sent to Collection centre/registered dismantler or recycler
 </h3>
      <table class='form-table-main'>
  	 <tr>
