--- a/waste/templates/src/form2.html
+++ b/waste/templates/src/form2.html
@@ -19,10 +19,19 @@
 <table>
 <tr>
 <td>
-Select Date
+From:
 </td>
 <td>
 <input type="text" class="datepicker" name="date">
+</td>
+</tr>
+
+<tr>
+<td>
+To:
+</td>
+<td>
+<input type="text" class="datepicker" name="datetwo">
 </td>
 </tr>
 
